--- a/app/pages/improve_cash_flow/index.njk
+++ b/app/pages/improve_cash_flow/index.njk
@@ -119,7 +119,11 @@
 
               <div class="flex gap30 aiC sp-reverse">
                 <div class="sec-left-wrapper visa">
-                  <figure class="sec__img w-full"><img id="zoomImg" class="w-full zoomImg" src="/assets/img/common/cash-flow.png" alt=""></figure>
+                  <figure class="sec__img w-full">
+                    <button class="btn-open-image image" data-modaal-content-source="/assets/img/common/cash-flow.png" >
+                      <img id="zoomImg" class="w-full zoomImg" src="/assets/img/common/cash-flow.png" alt="cash flow">
+                    </button>
+                  </figure>
                 </div>
 
                 <div class="gap-10 sec-right-wrapper visa">
