--- a/app/pages/payment_com/index.njk
+++ b/app/pages/payment_com/index.njk
@@ -77,7 +77,8 @@ link: "#material"
           <h1 class="ttl-primary">支払い.com</h1>
           <h3 class="ttl-tertiary">全ての支払いを、<span class="special">最長60日後</span>に <br />カードで先延ばしできます。</h3>
           <div class="btn-action">
-            <a href="https://shi-harai.com/signup/?referer=saison_newsletter_17" target="_blank" class="act-more orange_more2">
+            <a href="https://shi-harai.com/signup/?referer=saison_newsletter_17" target="_blank"
+              class="act-more orange_more2">
               <div class="act-more-tooltip pc-only">
                 <h4 class="act-more-tooltip__content">審査なし・書類提出不要！</h4>
               </div>
@@ -115,7 +116,9 @@ link: "#material"
         請求書払いをカードで先のばし。振り込みはお任せ！<br />
         <span class="font-weight-normal">期限の迫った請求書も、支払いまで最長60日余裕をプラス。資金繰りを改善し、借りずに事業を加速できます。</span>
       </h4>
-      <img id="zoomImg" class="zoomImg" src="/assets/img/common/cash-flow.png" alt="cast flow">
+      <button class="btn-open-image image" data-modaal-content-source="/assets/img/common/cash-flow.png" >
+        <img id="zoomImg" class="zoomImg" src="/assets/img/common/cash-flow.png" alt="cash flow">
+      </button>
     </div>
   </section>
 
@@ -255,7 +258,8 @@ link: "#material"
           <span class="primary-txt">振込名義は自由に指定OK</span> <br class="sp-only" /> 　お客様の名前で振り込みできるので、支払先へは利用を知られません
         </div>
         <div>
-          <a href="https://shi-harai.com/signup/?referer=saison_newsletter_17" target="_blank" class="act-more blue_gradient_btn">
+          <a href="https://shi-harai.com/signup/?referer=saison_newsletter_17" target="_blank"
+            class="act-more blue_gradient_btn">
             <div class="act-more-tooltip">
               <h4 class="act-more-tooltip__content">{{ "お急ぎの方はまずは無料登録！\n 審査や書類提出は必要ありません。" | safe }}</h4>
             </div>
@@ -412,8 +416,8 @@ link: "#material"
                     面倒な面談や、書類提出は必要ありません。
                   </div>
                 </div>
-                <div><a href="https://shi-harai.com/signup/?referer=saison_newsletter_17" target="_blank" class="blue_gradient_btn"
-                    href="#">今すぐ無料で登録</a></div>
+                <div><a href="https://shi-harai.com/signup/?referer=saison_newsletter_17" target="_blank"
+                    class="blue_gradient_btn" href="#">今すぐ無料で登録</a></div>
               </summary>
             </div>
           </div>
