--- a/app/pages/saison_invoice/index.njk
+++ b/app/pages/saison_invoice/index.njk
@@ -179,7 +179,9 @@
         <p class="ttl-tertiary">請求・回収業務の負担や資⾦繰りの不安から解消され、営業先開拓や商品開発に100%注⼒できます。</h5>
 
         <div class="content">
-          <img id="zoomImg" class="zoomImg" src="/assets/img/saison_invoice/saison_work.png">
+          <button class="btn-open-image image" data-modaal-content-source="/assets/img/saison_invoice/saison_work.png" >
+            <img id="zoomImg" class="zoomImg" src="/assets/img/saison_invoice/saison_work.png" alt="cast flow">
+          </button>
         </div>
       </div>
     </section>
