--- a/app/pages/sole_proprietorship/index.njk
+++ b/app/pages/sole_proprietorship/index.njk
@@ -240,7 +240,9 @@
                 必要なのはお手持ちのカードだけ。審査も書類も必要ありません。
               </dd>
               <div class="cash-flow-img">
-                <img id="zoomImg" class="zoomImg" src="/assets/img/common/cash-flow.png" alt="Your Image" class="credit-card-img"/>
+                <button class="btn-open-image image" data-modaal-content-source="/assets/img/common/cash-flow.png" >
+                  <img id="zoomImg" class="zoomImg" src="/assets/img/common/cash-flow.png" alt="cash-flow">
+                </button>
               </div>
             </div>
             <a href="/payment_com/" class="bondi_blue_outline_btn">支払い.comをもっと詳しく</a >
