--- a/app/assets/scss/4-pages/_platinum_business.scss
+++ b/app/assets/scss/4-pages/_platinum_business.scss
@@ -548,119 +548,11 @@
   }
 
   .section-question-and-answer {
-    text-align: center;
-    padding: 60px 0px 70px;
     background-color: #fff;
-    margin: auto;
-    max-width: 1200px;
 
-    .ttl-sub {
-      font-size: 14px;
-      font-weight: bold;
-      font-family: "Futura";
-      color: $primary-color;
-    }
-
-    @media #{$sp} {
-      padding: 35px 15px;
-    }
-
-    .ttl-secondary {
-      font-size: 32px;
-      margin-bottom: 61px;
-
-      @media #{$sp} {
-        margin-bottom: 30px;
-        font-size: 20px;
-      }
-    }
-
-    .question-tab,
-    .answer-tab {
-      justify-content: space-between;
-      align-items: center;
-      position: relative;
-      padding: 4px 30px;
-      width: 100%;
-      margin-bottom: 30px;
-
-      @media #{$sp} {
-        padding: 4px 8px;
-      }
-
-      .ttl-secondary {
-        font-size: 30px;
-        margin-bottom: 0;
-      }
-
-      .qa-content {
-        flex: 1;
-
-        .ttl-tertiary {
-          text-align: left;
-          font-size: 20px;
-          margin-bottom: 0;
-          font-weight: 400;
-
-          @media #{$sp} {
-            font-size: 16px;
-          }
-        }
-      }
-
-      .qa-button {
-        svg {
-          margin-top: 5px;
-        }
-        .svg__minus {
-          display: none;
-        }
-        &.open {
-          .svg__plus {
-            display: none;
-          }
-          .svg__minus {
-            display: block;
-          }
-        }
-      }
-    }
-
-    .question-tab {
-      cursor: pointer;
-      background: $blue-color-2 0% 0% no-repeat padding-box;
-      box-shadow: 0px 3px 20px #00000029;
-
-      .qa-marker {
-        color: $primary-color;
-      }
-
-      .qa-content {
-        .ttl-tertiary {
-          font-weight: bold;
-        }
-      }
-    }
-
-    .question-tab.open {
-      svg {
-        display: none;
-      }
-    }
-
-    .answer-tab {
-      background-color: #ffffff;
-      margin-top: -30px;
-      padding: 0 60px 0 30px;
-      display: none;
-
-      @media #{$sp} {
-        padding: 8px;
-      }
-
-      .qa-marker {
-        color: $green-color-1;
-      }
+    h5.ttl-secondary {
+      font-family: Futura;
+      margin-bottom: 0;
     }
   }
 
