--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -45,6 +45,7 @@
 @import '3-modules/sidebar';
 @import '3-modules/modal';
 @import '3-modules/comparision';
+@import '3-modules/qa-section';
 
 
 // 4 - pages
