--- a/app/pages/faq_service_list/index.njk
+++ b/app/pages/faq_service_list/index.njk
@@ -55,7 +55,7 @@
     <section class="section-secondary section">
       <div class="container-800">
 
-        {% for i in range(1, 5) %}
+        {% for i in range(0, 11) %}
           <div class="QA__content">
             <div class="question__content" >
               <div class="QA__content-head">Q.</div>
@@ -70,6 +70,11 @@
             </div>
           </div>
         {% endfor %}
+        <a class="bondi_blue_outline_btn show-faq-list">
+          <span class="bondi_blue_outline_btn__tittle">
+            もっと見る
+          </span>
+        </a>
       </div>
     </section>
 
