--- a/app/pages/gold_business_pro/index.njk
+++ b/app/pages/gold_business_pro/index.njk
@@ -478,43 +478,13 @@ link: "#application-flow"
     </div>
   </section>
 
-  <section id="faq" class="section-question-and-answer">
-    <h5 class="ttl-sub">FAQ</h5>
-    <h2 class="ttl-secondary">よくある質問</h2>
-    {% for i in range(1, 5) %}
-    <div class="qa">
-      <div class="flex gap20 question-tab">
-        <div class="qa-marker">
-          <h2 class="ttl-secondary">Q</h2>
-        </div>
-        <div class="qa-content">
-          <h3 class="ttl-tertiary">
-            質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。
-          </h3>
-        </div>
-        <button class="qa-button">
-          <span class="svg__plus">{% include 'component/icons/plus.njk' %}</span>
-          <span class="svg__minus">{% include 'component/icons/minus.njk' %}</span>
-        </button>
-      </div>
-      <div class="flex gap20 answer-tab">
-        <div class="qa-marker">
-          <h2 class="ttl-secondary">A</h2>
-        </div>
-        <div class="qa-content">
-          <h3 class="ttl-tertiary">
-            質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。
-          </h3>
-        </div>
-      </div>
-    </div>
-    {% endfor %}
-
-    <div class="btn-actions">
-      <a href="#" class="btn bondi_blue_outline_btn">もっと見る</a>
+  <section id="faq" class="section-question-and-answer fadein">
+    <div class="container">
+      <h5 class="ttl-secondary">FAQ</h5>
+      <h2 class="ttl-primary">よくある質問</h2>
+      {% include 'partial/qa_section.njk' %}
       <a href="/contact/" class="btn bondi_blue_btn more btn-other-question">その他のご質問をしたい方はこちら</a>
     </div>
-
   </section>
 
   <section id="application-flow" class="section-application-flow">
