--- a/app/pages/payment_com/index.njk
+++ b/app/pages/payment_com/index.njk
@@ -337,48 +337,12 @@ link: "#material"
 
   <section id="faq" class="section-question-and-answer fadein">
     <div class="container">
-      <h5 class="ttl-notice">FAQ</h5>
-      <h1 class="ttl-primary">よくある質問</h1>
-      <span class="section-question-and-answer__description">
-        お客様からよくいただくご質問にお答えします。この他にご質問がある方は、<a href="/contact">お問い合わせフォーム</a>より、お気軽にご連絡ください。
-        </br>
+      <h5 class="ttl-secondary">FAQ</h5>
+      <h2 class="ttl-primary">よくある質問</h2>
+      <p class="ttl-tertiary">お客様からよくいただくご質問にお答えします。この他にご質問がある方は、<a href="/contact">お問い合わせフォーム</a>より、お気軽にご連絡ください。</br>
         2営業日以内に担当者からご連絡させて頂きます。
-      </span>
-      <ul class="section-question-and-answer__list">
-        {% for i in range(1, 5) %}
-        <li class="qa">
-          <div class="flex gap20 question-tab">
-            <div class="qa-marker">
-              <h2 class="ttl-secondary">Q</h2>
-            </div>
-            <div class="qa-content">
-              <h3 class="ttl-tertiary">
-                質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。
-              </h3>
-            </div>
-            <button class="qa-button">
-              <span class="svg__plus">{% include 'component/icons/plus.njk' %}</span>
-              <span class="svg__minus">{% include 'component/icons/minus.njk' %}</span>
-            </button>
-          </div>
-          <div class="flex gap20 answer-tab">
-            <div class="qa-marker">
-              <h2 class="ttl-secondary">A</h2>
-            </div>
-            <div class="qa-content">
-              <h3 class="ttl-tertiary">
-                質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。質問回答が入ります。
-              </h3>
-            </div>
-          </div>
-        </li>
-        {% endfor %}
-      </ul>
-      {# <a href="/contact" class="faq_more bondi_blue_outline_btn">
-        <span class="bondi_blue_outline_btn__tittle">
-          もっと見る
-        </span>
-      </a> #}
+      </p>
+      {% include 'partial/qa_section.njk' %}
     </div>
   </section>
 
