--- a/app/assets/scss/3-modules/_home.scss
+++ b/app/assets/scss/3-modules/_home.scss
@@ -159,13 +159,13 @@
 
             &.anc__box__smes {
               &::before {
-                background-image: url("/assets/img/common/smes.svg");
+                background-image: url("https://ferret-one.akamaized.net/images/6511358e2b509e101ebbce35/original.svg?utime=1695626638");
               }
             }
 
             &.anc__box__sole {
               &::before {
-                background-image: url("/assets/img/common/sole_proprietors.svg");
+                background-image: url("https://ferret-one.akamaized.net/images/6511358de5a7361250f6d945/original.svg?utime=1695626637");
               }
             }
 
@@ -189,7 +189,7 @@
               transform: translateY(-50%);
               width: 13px;
               height: 13px;
-              background-image: url("/assets/img/common/arrow-right.svg");
+              background-image: url("https://ferret-one.akamaized.net/images/651135872b509e101ebbcd8c/original.svg?utime=1695626631");
               background-size: contain;
               z-index: 1;
             }
@@ -312,19 +312,19 @@
               background-size: cover;
               background-repeat: no-repeat;
               &.anc__box_image_1 {
-                background-image: url("/assets/img/common/search_1.png");
+                background-image: url("https://ferret-one.akamaized.net/images/651135942b509e101ebbcfb3/original.png?utime=1695626644");
               }
               &.anc__box_image_2 {
-                background-image: url("/assets/img/common/search_2.png");
+                background-image: url("https://ferret-one.akamaized.net/images/651135922b509e101ebbcfb1/original.png?utime=1695626642");
               }
               &.anc__box_image_3 {
-                background-image: url("/assets/img/common/search_3.png");
+                background-image: url("https://ferret-one.akamaized.net/images/65113591e5a736126af6d5aa/original.png?utime=1695626642");
               }
               &.anc__box_image_4 {
-                background-image: url("/assets/img/common/search_4.png");
+                background-image: url("https://ferret-one.akamaized.net/images/651135912b509e101ebbcfaf/original.png?utime=1695626641");
               }
               &.anc__box_image_5 {
-                background-image: url("/assets/img/common/search_5.png");
+                background-image: url("https://ferret-one.akamaized.net/images/6511359067b38c0fa3a17e83/original.png?utime=1695626640");
               }
 
               &::before {
@@ -996,7 +996,7 @@
   .octonary-section {
     position: relative;
     color: white;
-    background-image: url("/assets/img/common/contact_banner.png");
+    background-image: url("https://ferret-one.akamaized.net/images/651135ee67b38c10a0a09676/original.png?utime=1695626734");
     background-size: cover;
     background-repeat: no-repeat;
     padding: 70px 0;
