--- a/app/assets/scss/3-modules/_section.scss
+++ b/app/assets/scss/3-modules/_section.scss
@@ -2041,7 +2041,7 @@
 .card-type22 {
   position: relative;
   color: white;
-  background-image: url("/assets/img/common/contact_banner.png");
+  background-image: url("https://ferret-one.akamaized.net/images/651135e867b38c0fa3a18a56/original.png?utime=1695626728");
   background-size: cover;
   background-repeat: no-repeat;
   padding: 70px 0;
