--- a/app/assets/scss/4-pages/_business_card_creation.scss
+++ b/app/assets/scss/4-pages/_business_card_creation.scss
@@ -17,7 +17,7 @@
     padding: 114px 0;
     text-align: left;
     color: #fff;
-    background: url("../img/common/banner_4.png") 20% / cover no-repeat;
+    background: url("https://ferret-one.akamaized.net/images/6511362ce5a736126af6e0f4/original.png?utime=1695626796") 20% / cover no-repeat;
     background-size: cover;
     background-repeat: no-repeat;
 
@@ -337,17 +337,17 @@
           border-radius: 70px;
 
           &.first {
-            background: url("../img/common/circle_chosing1.png");
+            background: url("https://ferret-one.akamaized.net/images/651136162b509e101ebbe85c/original.png?utime=1695626775");
             background-repeat: no-repeat;
             background-size: cover;
           }
           &.second {
-            background: url("../img/common/circle_chosing2.png");
+            background: url("https://ferret-one.akamaized.net/images/6511360c67b38c10a0a0976f/original.png?utime=1695626764");
             background-repeat: no-repeat;
             background-size: cover;
           }
           &.third {
-            background: url("../img/common/circle_chosing3.png");
+            background: url("https://ferret-one.akamaized.net/images/651135efe5a736126af6da91/original.png?utime=1695626735");
             background-repeat: no-repeat;
             background-size: cover;
           }
