--- a/app/assets/scss/4-pages/_business_efficiency.scss
+++ b/app/assets/scss/4-pages/_business_efficiency.scss
@@ -1,10 +1,10 @@
 .business_efficiency-page {
   margin: auto;
-  padding: 138px 0 0px;
+  // padding: 138px 0 0px;
 
-  @media #{$sp} {
-    padding: 50px 0 0;
-  }
+  // @media #{$sp} {
+  //   padding: 50px 0 0;
+  // }
 
   // ===========START SECTIONS==========
 
@@ -12,7 +12,7 @@
     padding: 156px 0;
     text-align: left;
     background-color: #f7f7f7;
-    background-image: url("/assets/img/common/business_efficiency_bg.png");
+    background-image: url("https://ferret-one.akamaized.net/images/651136262b509e101ebbedbe/original.png?utime=1695626790");
     background-size: cover;
     background-repeat: no-repeat;
 
