--- a/app/assets/scss/4-pages/_business_support_loan.scss
+++ b/app/assets/scss/4-pages/_business_support_loan.scss
@@ -24,10 +24,10 @@
 
 .business-support-loan-page {
   margin: auto;
-  padding: 133px 0 0px;
-  @media #{$sp} {
-    padding: 50px 0 0;
-  }
+  // padding: 133px 0 0px;
+  // @media #{$sp} {
+  //   padding: 50px 0 0;
+  // }
 
   // ===========START SECTIONS==========
 
