--- a/app/assets/scss/4-pages/_case_list.scss
+++ b/app/assets/scss/4-pages/_case_list.scss
@@ -1,15 +1,15 @@
 .case_list-page {
   margin: auto;
-  padding: 140px 0 0px;
+  // padding: 140px 0 0px;
 
-  @media #{$sp} {
-    padding: 50px 0 0px;
-  }
+  // @media #{$sp} {
+  //   padding: 50px 0 0px;
+  // }
 
   .section-welcome {
     text-align: center;
     padding: 140px 0;
-    background: url(../img/common/lower_visual.png) 50% / cover no-repeat;
+    background: url("https://ferret-one.akamaized.net/images/651135a6e5a7361250f6df8d/original.png?utime=1695626662") 50% / cover no-repeat;
 
     @media #{$sp} {
       padding: 50px 10px;
