--- a/app/assets/scss/4-pages/_catalog_list.scss
+++ b/app/assets/scss/4-pages/_catalog_list.scss
@@ -1,14 +1,14 @@
 .catalog-list-page {
   margin: auto;
-  padding: 140px 0 0px;
-  @media only screen and (max-width: 770px) {
-    padding: 50px 0 0px;
-  }
+  // padding: 140px 0 0px;
+  // @media only screen and (max-width: 770px) {
+  //   padding: 50px 0 0px;
+  // }
   .section-header {
     width: 100%;
     padding: 0 15px;
     height: 400px;
-    background-image: url(../img/common/lower_visual.png);
+    background-image: url("https://ferret-one.akamaized.net/images/651135a6e5a7361250f6df8d/original.png?utime=1695626662");
     background-size: cover;
     background-repeat: no-repeat;
     opacity: 1;
