--- a/app/assets/scss/4-pages/_platinum_business.scss
+++ b/app/assets/scss/4-pages/_platinum_business.scss
@@ -2,7 +2,7 @@
 
 .platinum_business-page {
   .section-welcome {
-    background-image: url("/assets/img/common/platinum_banner.png");
+    background-image: url("https://ferret-one.akamaized.net/images/6511359be5a7361250f6ddb1/original.png?utime=1695626651");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
