--- a/app/assets/scss/4-pages/_service.scss
+++ b/app/assets/scss/4-pages/_service.scss
@@ -2,7 +2,7 @@
   .section-welcome {
     text-align: center;
     padding: 119px 0;
-    background: url(../img/common/lower_visual.png) 50% / cover no-repeat;
+    background: url("https://ferret-one.akamaized.net/images/651135a6e5a7361250f6df8d/original.png?utime=1695626662") 50% / cover no-repeat;
 
     @media #{$sp} {
       padding: 30px 10px;
