--- a/app/assets/scss/4-pages/_welfare.scss
+++ b/app/assets/scss/4-pages/_welfare.scss
@@ -6,7 +6,7 @@
     padding-bottom: 40px;
     text-align: left;
     background-color: #f7f7f7;
-    background-image: url("/assets/img/common/welfare_visual.png");
+    background-image: url("https://ferret-one.akamaized.net/images/6511358a2b509e1045bb6964/original.png?utime=1695626634");
     background-size: cover;
     background-repeat: no-repeat;
 
