--- a/app/assets/scss/4-pages/_whitepaper.scss
+++ b/app/assets/scss/4-pages/_whitepaper.scss
@@ -1,6 +1,6 @@
 .whitepaper_list_page {
   .section-welcome {
-    background-image: url("/assets/img/common/lower_visual.png");
+    background-image: url("https://ferret-one.akamaized.net/images/651135a6e5a7361250f6df8d/original.png?utime=1695626662");
     background-size: cover;
     background-repeat: no-repeat;
     padding: 46px 0 35px;
