--- a/app/assets/scss/4-pages/_business.scss
+++ b/app/assets/scss/4-pages/_business.scss
@@ -1,8 +1,8 @@
 .smaller_companies {
   margin: auto;
-  padding: 133px 0 0px;
+  // padding: 133px 0 0px;
   @media #{$sp} {
-    padding: 50px 0 0;
+    // padding: 50px 0 0;
   }
 
   // ===========START SECTIONS==========
