--- a/app/assets/scss/4-pages/_personal.scss
+++ b/app/assets/scss/4-pages/_personal.scss
@@ -1,9 +1,9 @@
 .personal-page {
   margin: auto;
-  padding: 133px 0 0px;
-  @media #{$sp} {
-    padding: 50px 0 0;
-  }
+  // padding: 133px 0 0px;
+  // @media #{$sp} {
+  //   padding: 50px 0 0;
+  // }
 
   // ===========START SECTIONS==========
 
