--- a/app/assets/scss/4-pages/_section_common.scss
+++ b/app/assets/scss/4-pages/_section_common.scss
@@ -315,7 +315,7 @@
 }
 
 .section-contact2 {
-  background-image: url("/assets/img/common/contact_banner.png");
+  background-image: url("https://ferret-one.akamaized.net/images/650d6c71e6dc9307760599e5/original.png?utime=1695378545");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
