--- a/app/assets/scss/4-pages/_service.scss
+++ b/app/assets/scss/4-pages/_service.scss
@@ -275,7 +275,7 @@
           gap: 10px;
           flex-wrap: wrap;
 
-          a {
+          span {
             border-radius: 20px;
             width: 200px;
             height: 40px;
