--- a/app/pages/service/index.njk
+++ b/app/pages/service/index.njk
@@ -65,7 +65,7 @@ link:"#"
   <section class="section-card-list">
     <div class="container-1200">
       <div class="section-wrapper" id="result">
-        <div class="card-section cursor-pointer cursor-pointer">
+        <a class="card-section cursor-pointer ">
           <img src="/assets/img/credit_cards/saison-03.png" alt="cast flow">
           <div class="content">
             <div class="title">
@@ -76,14 +76,14 @@ link:"#"
               中小企業の経営と事業成長を強力にサポートする一枚。
             </div>
             <div class="list-button">
-              <a  class="bondi_blue_outline_btn">中小企業向け</a>
-              <a  class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
-              <a  class="bondi_green_outline_btn">経費を削減したい</a>
+              <span  class="bondi_blue_outline_btn">中小企業向け</span>
+              <span  class="bondi_green_outline_btn">ビジネスカードを作りたい</span>
+              <span  class="bondi_green_outline_btn">経費を削減したい</span>
             </div>
           </div>
-        </div>
+        </a>
 
-        <div class="card-section cursor-pointer">
+        <a class="card-section cursor-pointer">
           <img src="/assets/img/credit_cards/saison-01.png" alt="cast flow">
           <div class="content">
             <div class="title">
@@ -94,14 +94,14 @@ link:"#"
               ビジネスにさらなる安心を与える一枚。
             </div>
             <div class="list-button">
-              <a  class="bondi_blue_outline_btn">中小企業向け</a>
-              <a  class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
-              <a  class="bondi_green_outline_btn">経費を削減したい</a>
+              <span  class="bondi_blue_outline_btn">中小企業向け</span>
+              <span  class="bondi_green_outline_btn">ビジネスカードを作りたい</span>
+              <span  class="bondi_green_outline_btn">経費を削減したい</span>
             </div>
           </div>
-        </div>
+        </a>
 
-        <div class="card-section cursor-pointer">
+        <a class="card-section cursor-pointer">
           <img src="/assets/img/credit_cards/saison-02.png" alt="cast flow">
           <div class="content">
             <div class="title">
@@ -112,13 +112,14 @@ link:"#"
               効率化とコスト削減を目指すならこの一枚。
             </div>
             <div class="list-button">
-              <a  class="bondi_blue_outline_btn">中小企業向け</a>
-              <a  class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
-              <a  class="bondi_green_outline_btn">経費を削減したい</a>
+              <span  class="bondi_blue_outline_btn">中小企業向け</span>
+              <span  class="bondi_green_outline_btn">ビジネスカードを作りたい</span>
+              <span  class="bondi_green_outline_btn">経費を削減したい</span>
             </div>
           </div>
-        </div>
-        <div class="card-section cursor-pointer">
+        </a>
+
+        <a class="card-section cursor-pointer">
           <img src="/assets/img/credit_cards/american-express-01.png" alt="cast flow">
           <div class="content">
             <div class="title">
@@ -129,13 +130,14 @@ link:"#"
               個人与信型ビジネスカード
             </div>
             <div class="list-button">
-              <a  class="bondi_blue_outline_btn">個人事業主向け</a>
-              <a  class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
-              <a  class="bondi_green_outline_btn">経費を削減したい</a>
+              <span  class="bondi_blue_outline_btn">個人事業主向け</span>
+              <span  class="bondi_green_outline_btn">ビジネスカードを作りたい</span>
+              <span  class="bondi_green_outline_btn">経費を削減したい</span>
             </div>
           </div>
-        </div>
-        <div class="card-section cursor-pointer">
+        </a>
+
+        <a class="card-section cursor-pointer">
           <img src="/assets/img/credit_cards/american-express-02.png" alt="cast flow">
           <div class="content">
             <div class="title">
@@ -146,13 +148,14 @@ link:"#"
               初めてのビジネスカードに。シンプルなこの一枚。
             </div>
             <div class="list-button">
-              <a  class="bondi_blue_outline_btn">中小企業向け</a>
-              <a  class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
-              <a  class="bondi_green_outline_btn">経費を削減したい</a>
+              <span  class="bondi_blue_outline_btn">中小企業向け</span>
+              <span  class="bondi_green_outline_btn">ビジネスカードを作りたい</span>
+              <span  class="bondi_green_outline_btn">経費を削減したい</span>
             </div>
           </div>
-        </div>
-        <div class="card-section cursor-pointer">
+        </a>
+
+        <a class="card-section cursor-pointer">
           <img src="/assets/img/credit_cards/saison-04.png" alt="cast flow">
           <div class="content">
             <div class="title">
@@ -163,13 +166,13 @@ link:"#"
               毎⽉の請求業務を最短15分に短縮！未⼊⾦対応をゼロに
             </div>
             <div class="list-button">
-              <a  class="bondi_blue_outline_btn">中小企業向け</a>
-              <a  class="bondi_green_outline_btn">資金繰りを改善したい</a>
-              <a  class="bondi_green_outline_btn">業務効率化を図りたい</a>
+              <span  class="bondi_blue_outline_btn">中小企業向け</span>
+              <span  class="bondi_green_outline_btn">資金繰りを改善したい</span>
+              <span  class="bondi_green_outline_btn">業務効率化を図りたい</span>
             </div>
           </div>
-        </div>
-        <div class="card-section cursor-pointer">
+        </a>
+        <a class="card-section cursor-pointer">
           <img src="/assets/img/credit_cards/saison-05.png" alt="cast flow">
           <div class="content">
             <div class="title">
@@ -180,14 +183,14 @@ link:"#"
               すべての支払いを、最長60日後にカードで先延ばし!
             </div>
             <div class="list-button">
-              <a  class="bondi_blue_outline_btn">個人事業主向け</a>
-              <a  class="bondi_blue_outline_btn">中小企業向け</a>
-              <a  class="bondi_green_outline_btn">資金繰りを改善したい</a>
-              <a  class="bondi_green_outline_btn">業務効率化を図りたい</a>
+              <span  class="bondi_blue_outline_btn">個人事業主向け</span>
+              <span  class="bondi_blue_outline_btn">中小企業向け</span>
+              <span  class="bondi_green_outline_btn">資金繰りを改善したい</span>
+              <span  class="bondi_green_outline_btn">業務効率化を図りたい</span>
             </div>
           </div>
-        </div>
-        <div class="card-section cursor-pointer">
+        </a>
+        <a class="card-section cursor-pointer">
           <img src="/assets/img/credit_cards/saison-06.png" alt="cast flow">
           <div class="content">
             <div class="title">
@@ -198,12 +201,12 @@ link:"#"
               従業員が喜ぶ優待メニューが充実!月額385円～/人で。!
             </div>
             <div class="list-button">
-              <a  class="bondi_blue_outline_btn">中小企業向け</a>
-              <a  class="bondi_green_outline_btn">福利厚生を充実させたい</a>
+              <span  class="bondi_blue_outline_btn">中小企業向け</span>
+              <span  class="bondi_green_outline_btn">福利厚生を充実させたい</span>
             </div>
           </div>
-        </div>
-        <div class="card-section cursor-pointer">
+        </a>
+        <a class="card-section cursor-pointer">
           <img src="/assets/img/credit_cards/saison-07.png" alt="cast flow">
           <div class="content">
             <div class="title">
@@ -214,12 +217,12 @@ link:"#"
               まとまった資金を低金利で!
             </div>
             <div class="list-button">
-              <a  class="bondi_blue_outline_btn">個人事業主向け</a>
-              <a  class="bondi_green_outline_btn">資金繰りを改善したい</a>
+              <span  class="bondi_blue_outline_btn">個人事業主向け</span>
+              <span  class="bondi_green_outline_btn">資金繰りを改善したい</span>
             </div>
           </div>
-        </div>
-        <div class="card-section cursor-pointer">
+        </a>
+        <a class="card-section cursor-pointer">
           <img src="/assets/img/credit_cards/saison-08.png" alt="cast flow">
           <div class="content">
             <div class="title">
@@ -230,12 +233,12 @@ link:"#"
               仮払い・立替払いを廃止！経費精算を自動化できる!
             </div>
             <div class="list-button">
-              <a  class="bondi_blue_outline_btn">中小企業向け</a>
-              <a  class="bondi_green_outline_btn">業務効率化を図りたい</a>
+              <span  class="bondi_blue_outline_btn">中小企業向け</span>
+              <span  class="bondi_green_outline_btn">業務効率化を図りたい</span>
             </div>
           </div>
-        </div>
-        <div class="card-section cursor-pointer">
+        </a>
+        <a class="card-section cursor-pointer">
           <img src="/assets/img/credit_cards/saison-09.png" alt="cast flow">
           <div class="content">
             <div class="title">
@@ -246,11 +249,11 @@ link:"#"
               出張手配の問題をまるごと解決!
             </div>
             <div class="list-button">
-              <a  class="bondi_blue_outline_btn">中小企業向け</a>
-              <a  class="bondi_green_outline_btn">業務効率化を図りたい</a>
+              <span  class="bondi_blue_outline_btn">中小企業向け</span>
+              <span  class="bondi_green_outline_btn">業務効率化を図りたい</span>
             </div>
           </div>
-        </div>
+        </a>
       </div>
     </div>
   </section>
