--- a/app/assets/scss/4-pages/_faq.scss
+++ b/app/assets/scss/4-pages/_faq.scss
@@ -57,7 +57,7 @@
 
       .grid-container {
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(3, minmax(0, 1fr));
         grid-gap: 30px;
         padding: 0 120px;
         transition: all 0.3s;
@@ -92,7 +92,7 @@
             letter-spacing: 0px;
             color: #ffffff;
             opacity: 1;
-            white-space: nowrap;
+            // white-space: nowrap;
           }
 
           img {
