--- a/app/pages/faq/index.njk
+++ b/app/pages/faq/index.njk
@@ -1,19 +1,19 @@
 {% extends "layout/default.njk" %}
 
 {# Custom SEO tags, leave blank to apply the default values #}
-{% set title = "" %}
-{% set description = "" %}
-{% set keywords = "" %}
+{% set title = " %}
+{% set description = " %}
+{% set keywords = " %}
 
 {# Page settings and also body class #}
-{% set page = "" %}
+{% set page = " %}
 
 {# Breadcrumb #}
 {% set breadcrumb = [
-  {
-    text: "よくある質問",
-    link: "#"
-  }
+{
+text: "よくある質問",
+link: "#"
+}
 ] %}
 
 {# Custom tags before </head> #}
@@ -32,95 +32,95 @@
   </section>
   <section class="section-search">
     <div class="search">
-      <form action="" class="search__form">
+      <form action=" class=" search__form">
         <input class="search__input" type="search" placeholder="キーワードから探す">
         <button class="search__btn" type="submit"><img src="/assets/img/common/faq-search.svg"></button>
       </form>
     </div>
     <div class="search-block">
       <div class="grid-container">
-        <div class="grid-item">
-          <a href="#">
+        <a class="grid-item" href="#">
+          <div class="grid-item__detail">
             <p class="grid-item__title">
               セゾンプラチナ・ビジネス プロ・アメリカン・
-              <br/>
+              <br />
               エキスプレス®・カード
             </p>
             <img src="/assets/img/common/arrow-down.svg">
-          </a>
-        </div>
-        <div class="grid-item">
-          <a href="#">
+          </div>
+        </a>
+        <a class="grid-item" href="#">
+          <div class="grid-item__detail">
             <p class="grid-item__title">セゾンゴールド・ビジネスプロ・カード</p>
             <img src="/assets/img/common/arrow-down.svg">
-          </a>
-        </div>
-        <div class="grid-item">
-          <a href="#">
+          </div>
+        </a>
+        <a class="grid-item" href="#">
+          <div class="grid-item__detail">
             <p class="grid-item__title">
               セゾン・アメリカン・エキスプレス®・
-              <br/>
+              <br />
               ビジネス プロ・パーチェシング・カード
             </p>
             <img src="/assets/img/common/arrow-down.svg">
-          </a>
-        </div>
-        <div class="grid-item">
-          <a href="#">
+          </div>
+        </a>
+        <a class="grid-item" href="#">
+          <div class="grid-item__detail">
             <p class="grid-item__title">
               セゾンコプラチナ・ビジネス・アメリカン・
-              <br/>
+              <br />
               エキスプレス®・カード</br>
             </p>
             <img src="/assets/img/common/arrow-down.svg">
-          </a>
-        </div>
-        <div class="grid-item">
-          <a href="#">
+          </div>
+        </a>
+        <a class="grid-item" href="#">
+          <div class="grid-item__detail">
             <p class="grid-item__title">
               セゾンコバルト・ビジネス・アメリカン・
-              <br/>
+              <br />
               エキスプレス®・カード
             </p>
             <img src="/assets/img/common/arrow-down.svg">
-          </a>
-        </div>
-        <div class="grid-item">
-          <a href="#">
+          </div>
+        </a>
+        <a class="grid-item" href="#">
+          <div class="grid-item__detail">
             <p class="grid-item__title">支払い.com</p>
             <img src="/assets/img/common/arrow-down.svg">
-          </a>
-        </div>
-        <div class="grid-item">
-          <a href="#">
+          </div>
+        </a>
+        <a class="grid-item" href="#">
+          <div class="grid-item__detail">
             <p class="grid-item__title">セゾンインボイス </p>
             <img src="/assets/img/common/arrow-down.svg">
-          </a>
-        </div>
-        <div class="grid-item">
-          <a href="#">
+          </div>
+        </a>
+        <a class="grid-item" href="#">
+          <div class="grid-item__detail">
             <p class="grid-item__title">セゾンフクリコ</p>
             <img src="/assets/img/common/arrow-down.svg">
-          </a>
-        </div>
-        <div class="grid-item">
-          <a href="#">
+          </div>
+        </a>
+        <a class="grid-item" href="#">
+          <div class="grid-item__detail">
             <p class="grid-item__title">ビジネスサポートローン</p>
             <img src="/assets/img/common/arrow-down.svg">
-          </a>
-        </div>
-        <div class="grid-item">
-          <a href="#">
+          </div>
+        </a>
+        <a class="grid-item" href="#">
+          <div class="grid-item__detail">
             <p class="grid-item__title">Concur Expense</p>
             <img src="/assets/img/common/arrow-down.svg">
-          </a>
-        </div>
-        <div class="grid-item">
-          <a href="#">
+          </div>
+        </a>
+        <a class="grid-item" href="#">
+          <div class="grid-item__detail">
             <p class="grid-item__title">CosPro</p>
             <img src="/assets/img/common/arrow-down.svg">
-          </a>
-        </div>
+          </div>
+        </a>
       </div>
     </div>
   </section>
@@ -154,7 +154,7 @@
               <summary class="card__box">
                 <div class="card__box--ttl">ご相談・お問い合わせはこちら</div>
                 <div class="card__box--txt">中小企業や個人事業主のよくある課題に対して解決のヒントに<br>
-                なる資料を無料でご提供しています。ぜひご活用ください。  
+                  なる資料を無料でご提供しています。ぜひご活用ください。
                 </div>
                 <div><a class="blue_gradient_btn" href="/contact/">お気軽にお問い合わせください。</a></div>
               </summary>
