--- a/app/pages/faq/index.njk
+++ b/app/pages/faq/index.njk
@@ -1,19 +1,19 @@
 {% extends "layout/default.njk" %}
 
 {# Custom SEO tags, leave blank to apply the default values #}
-{% set title = " %}
-{% set description = " %}
-{% set keywords = " %}
+{% set title = "" %}
+{% set description = "" %}
+{% set keywords = "" %}
 
 {# Page settings and also body class #}
-{% set page = " %}
+{% set page = "" %}
 
 {# Breadcrumb #}
 {% set breadcrumb = [
-{
-text: "よくある質問",
-link: "#"
-}
+  {
+    text: "よくある質問",
+    link: "#"
+  }
 ] %}
 
 {# Custom tags before </head> #}
