--- a/app/assets/scss/4-pages/_faq.scss
+++ b/app/assets/scss/4-pages/_faq.scss
@@ -64,7 +64,9 @@
         transition: all 0.3s;
 
         @media #{$sp} {
-          display: block;
+          grid-template-columns: auto;
+          grid-template-rows: repeat(11, 1fr);
+          grid-gap: 15px;
           width: 100%;
           padding: 0 20px;
         }
@@ -80,11 +82,16 @@
             height: 100%;
             padding: 50px 30px;
             transition: all 0.3s;
+
             &:hover {
               opacity: 1;
               img {
                 bottom: 15%;
               }
+            }
+
+            @media #{$sp} {
+              padding: 30px 15px;
             }
           }
 
@@ -105,7 +112,7 @@
           }
 
           @media #{$sp} {
-            margin-bottom: 10px;
+            margin-bottom: 0px;
           }
         }
       }
