--- a/app/assets/scss/4-pages/_faq.scss
+++ b/app/assets/scss/4-pages/_faq.scss
@@ -57,16 +57,13 @@
 
       .grid-container {
         display: grid;
-        grid-template-columns: repeat(3, minmax(0, 1fr));
-        grid-template-rows: repeat(4, 1fr);
+        grid-template-columns: repeat(4, 1fr);
         grid-gap: 30px;
         padding: 0 120px;
         transition: all 0.3s;
 
         @media #{$sp} {
-          grid-template-columns: auto;
-          grid-template-rows: repeat(11, 1fr);
-          grid-gap: 15px;
+          display: block;
           width: 100%;
           padding: 0 20px;
         }
@@ -77,21 +74,15 @@
           background: #444444;
           position: relative;
 
-          .grid-item__detail {
+          a {
             width: 100%;
-            height: 100%;
             padding: 50px 30px;
             transition: all 0.3s;
-
             &:hover {
               opacity: 1;
               img {
                 bottom: 15%;
               }
-            }
-
-            @media #{$sp} {
-              padding: 30px 15px;
             }
           }
 
@@ -101,7 +92,7 @@
             letter-spacing: 0px;
             color: #ffffff;
             opacity: 1;
-            // white-space: nowrap;
+            white-space: nowrap;
           }
 
           img {
@@ -112,7 +103,7 @@
           }
 
           @media #{$sp} {
-            margin-bottom: 0px;
+            margin-bottom: 10px;
           }
         }
       }
