--- a/app/pages/faq/index.njk
+++ b/app/pages/faq/index.njk
@@ -32,95 +32,61 @@
   </section>
   <section class="section-search">
     <div class="search">
-      <form action=" class=" search__form">
+      <form action="" class="search__form">
         <input class="search__input" type="search" placeholder="キーワードから探す">
         <button class="search__btn" type="submit"><img src="/assets/img/common/faq-search.svg"></button>
       </form>
     </div>
     <div class="search-block">
       <div class="grid-container">
-        <a class="grid-item" href="#">
-          <div class="grid-item__detail">
-            <p class="grid-item__title">
-              セゾンプラチナ・ビジネス プロ・アメリカン・
-              <br />
-              エキスプレス®・カード
-            </p>
+        <div class="grid-item">
+          <a href="#">
+            <p class="grid-item__title">個人与信型ビジネスカード</p>
             <img src="/assets/img/common/arrow-down.svg">
-          </div>
-        </a>
-        <a class="grid-item" href="#">
-          <div class="grid-item__detail">
-            <p class="grid-item__title">セゾンゴールド・ビジネスプロ・カード</p>
+          </a>
+        </div>
+        <div class="grid-item">
+          <a href="#">
+            <p class="grid-item__title">法人与信型ビジネスカード</p>
             <img src="/assets/img/common/arrow-down.svg">
-          </div>
-        </a>
-        <a class="grid-item" href="#">
-          <div class="grid-item__detail">
-            <p class="grid-item__title">
-              セゾン・アメリカン・エキスプレス®・
-              <br />
-              ビジネス プロ・パーチェシング・カード
-            </p>
-            <img src="/assets/img/common/arrow-down.svg">
-          </div>
-        </a>
-        <a class="grid-item" href="#">
-          <div class="grid-item__detail">
-            <p class="grid-item__title">
-              セゾンコプラチナ・ビジネス・アメリカン・
-              <br />
-              エキスプレス®・カード</br>
-            </p>
-            <img src="/assets/img/common/arrow-down.svg">
-          </div>
-        </a>
-        <a class="grid-item" href="#">
-          <div class="grid-item__detail">
-            <p class="grid-item__title">
-              セゾンコバルト・ビジネス・アメリカン・
-              <br />
-              エキスプレス®・カード
-            </p>
-            <img src="/assets/img/common/arrow-down.svg">
-          </div>
-        </a>
-        <a class="grid-item" href="#">
-          <div class="grid-item__detail">
+          </a>
+        </div>
+        <div class="grid-item">
+          <a href="#">
             <p class="grid-item__title">支払い.com</p>
             <img src="/assets/img/common/arrow-down.svg">
-          </div>
-        </a>
-        <a class="grid-item" href="#">
-          <div class="grid-item__detail">
+          </a>
+        </div>
+        <div class="grid-item">
+          <a href="#">
             <p class="grid-item__title">セゾンインボイス </p>
             <img src="/assets/img/common/arrow-down.svg">
-          </div>
-        </a>
-        <a class="grid-item" href="#">
-          <div class="grid-item__detail">
+          </a>
+        </div>
+        <div class="grid-item">
+          <a href="#">
             <p class="grid-item__title">セゾンフクリコ</p>
             <img src="/assets/img/common/arrow-down.svg">
-          </div>
-        </a>
-        <a class="grid-item" href="#">
-          <div class="grid-item__detail">
+          </a>
+        </div>
+        <div class="grid-item">
+          <a href="#">
             <p class="grid-item__title">ビジネスサポートローン</p>
             <img src="/assets/img/common/arrow-down.svg">
-          </div>
-        </a>
-        <a class="grid-item" href="#">
-          <div class="grid-item__detail">
+          </a>
+        </div>
+        <div class="grid-item">
+          <a href="#">
             <p class="grid-item__title">Concur Expense</p>
             <img src="/assets/img/common/arrow-down.svg">
-          </div>
-        </a>
-        <a class="grid-item" href="#">
-          <div class="grid-item__detail">
+          </a>
+        </div>
+        <div class="grid-item">
+          <a href="#">
             <p class="grid-item__title">CosPro</p>
             <img src="/assets/img/common/arrow-down.svg">
-          </div>
-        </a>
+          </a>
+        </div>
       </div>
     </div>
   </section>
@@ -154,7 +120,7 @@
               <summary class="card__box">
                 <div class="card__box--ttl">ご相談・お問い合わせはこちら</div>
                 <div class="card__box--txt">中小企業や個人事業主のよくある課題に対して解決のヒントに<br>
-                  なる資料を無料でご提供しています。ぜひご活用ください。
+                なる資料を無料でご提供しています。ぜひご活用ください。
                 </div>
                 <div><a class="blue_gradient_btn" href="/contact/">お気軽にお問い合わせください。</a></div>
               </summary>
