fix button case detail

--- a/app/assets/scss/2-basics/_base.scss
+++ b/app/assets/scss/2-basics/_base.scss
@@ -281,12 +281,12 @@ a,button[type="submit"] {
 
 /*** その他 ***/
 
-// main {
-//   padding-top: 133px;
-//   @media #{$sp} {
-//     padding-top: 50px;
-//   }
-// }
+main {
+  padding-top: 133px;
+  @media #{$sp} {
+    padding-top: 50px;
+  }
+}
 
 .disabled {
   pointer-events: none;
