--- a/app/assets/scss/4-pages/_case_detail.scss
+++ b/app/assets/scss/4-pages/_case_detail.scss
@@ -69,6 +69,10 @@
           margin: auto;
           border-radius: 50px;
 
+          &:hover {
+            color: #000 !important;
+          }
+
           @media #{$sp} {
             display: flex;
             max-width: 240px;
@@ -220,7 +224,7 @@
             border: 2px solid #0497b5;
             opacity: 1;
             background: white;
-            color: #0497b5;
+            color: #0497b5 !important;
 
             svg {
               path {
